WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
58269
[chromium] Crash in WebViewImpl::caretOrSelectionBounds
https://bugs.webkit.org/show_bug.cgi?id=58269
Summary
[chromium] Crash in WebViewImpl::caretOrSelectionBounds
Ryosuke Niwa
Reported
2011-04-11 14:27:57 PDT
Chromium crashes when extending selection over input[type="file"].
Attachments
fixes the bug
(5.15 KB, patch)
2011-04-11 14:39 PDT
,
Ryosuke Niwa
tony
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2011-04-11 14:39:16 PDT
Created
attachment 89093
[details]
fixes the bug
Ryosuke Niwa
Comment 2
2011-04-11 14:41:31 PDT
I've submitted a Chromium try job for this. Hopefully, they won't take forever.
Tony Chang
Comment 3
2011-04-11 14:48:53 PDT
Comment on
attachment 89093
[details]
fixes the bug View in context:
https://bugs.webkit.org/attachment.cgi?id=89093&action=review
> LayoutTests/editing/selection/extend-over-file-input-by-drag-crash.html:7 > +WebKit should not crash. > +In </p>
Were you going to write another sentence here or did you mean to remove "In"?
> LayoutTests/ChangeLog:9 > + While the bug was specific to Chromium port, the test will be ran on all ports because
"will be ran" -> "will be run"
Ryosuke Niwa
Comment 4
2011-04-11 18:33:52 PDT
Committed
r83548
: <
http://trac.webkit.org/changeset/83548
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug